# DataProcess

./: CMakeLists.txt  README.md  run_test.sh
config/: DataProcess.yaml
include/: data_process.h  dataprocess_api.h
src/: data_process.cpp  dataprocess_api.cpp
test/: test.cpp
